--- a/src/styles/BoardMembers.css
+++ b/src/styles/BoardMembers.css
@@ -10,6 +10,36 @@ body {
     radial-gradient(circle at 85% 90%, #0f172a99, transparent 40%);
   font-family: "Segoe UI", system-ui, sans-serif;
 }
+/* /* ===============================
+   BACK BUTTON
+================================ */
+.back-bn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 10;
+
+  background: linear-gradient(135deg, #1e3a8a, #020617);
+  color: #ffffff;
+
+   border: none;
+  border-radius: 8px;
+  cursor: pointer;
+
+  box-shadow: 0 6px 16px rgba(30, 58, 138, 0.45);
+  transition: all 0.25s ease;
+
+  /* 🔥 POSITION ONLY */
+  position: fixed;
+  top: 20px;
+  z-index: 1000;
+}
+
+.back-bn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 18px 40px rgba(37, 99, 235, 0.6);
+  z-index: 10;
+} */
 
 /* ===============================
    PAGE CONTAINER
